internal/xds/translator/testdata/out/xds-ir-sublinear/http-route-with-tlsbundle.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-btls/http
  virtualHosts:
  - domains:
    - '*'
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /exact:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    path: /exact
                  name: httproute/envoy-gateway/httproute-btls/rule/0/match/0/*
                  route:
                    cluster: httproute/envoy-gateway/httproute-btls/rule/0
                    upgradeConfigs:
                    - upgradeType: websocket
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
    name: envoy-gateway/gateway-btls/http/*
